--- a/src/application/Vista.fxml
+++ b/src/application/Vista.fxml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controladora">
+<AnchorPane prefHeight="200.0" prefWidth="400.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controladora">
    <children>
-      <HBox layoutX="86.0" layoutY="144.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
-         <children>
-            <Button mnemonicParsing="false" onAction="#setblur" text="Blur" />
-            <Button mnemonicParsing="false" onAction="#setfocus" text="FOCUS" />
-            <Button mnemonicParsing="false" onAction="#handleClose" text="Close" textFill="#1f0ac3" />
-         </children>
-      </HBox>
-      <Pane fx:id="mypane" layoutX="76.0" prefHeight="100.0" prefWidth="165.0" styleClass="fondo" stylesheets="@application.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <ImageView fx:id="forestview" fitHeight="70.0" fitWidth="307.0" layoutX="109.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@blueforest.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
