--- a/src/application/Vista.fxml
+++ b/src/application/Vista.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="200.0" prefWidth="400.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controladora">
+<AnchorPane prefHeight="200.0" prefWidth="400.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
-      <ImageView fx:id="forestview" fitHeight="70.0" fitWidth="307.0" layoutX="109.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="forestview" fitHeight="70.0" fitWidth="307.0" layoutX="100.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@blueforest.jpg" />
          </image>
